--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "cross-env": "^5.1.3",
     "less": "^3.8.1",
     "@wepy/compiler-babel": "^2.0.1",
-    "@wepy/compiler-less": "^2.0.1"
+    "@wepy/compiler-less": "2.0.3"
   }
 }
